--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Taha's Brand - T-shirts</title>
+        <title>Clothing Brand</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
-            rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     </head>
@@ -15,10 +14,9 @@
         <div class="container my-4">
             <div class="row">
                 <div class="col-md-4">
-                    <a href="Hoodies/hoodies.html">
+                    <a href="Hoodies/hoodies.html" class="text-decoration-none">
                         <div class="card mb-4">
-                        <img src="https://i.pinimg.com/control/236x/a6/83/b5/a683b564b3a6d3bc8411b6a4351075a1.jpg"
-                            class="card-img-top" alt="T-shirt Image">
+                        <img src="https://i.pinimg.com/control/236x/a6/83/b5/a683b564b3a6d3bc8411b6a4351075a1.jpg"class="card-img-top" alt="T-shirt Image">
                         <div class="card-body">
                             <h5 class="card-title text-center text-decoration-none text-dark">Hoodies</h5>                    
                         </div>
@@ -26,10 +24,9 @@
                     </a>  
                 </div>
                 <div class="col-md-4">
-                    <a href="T-shirt/tshirt.html">
+                    <a href="T-shirt/tshirt.html" class="text-decoration-none">
                        <div class="card mb-4">
-                            <img src="https://i.pinimg.com/236x/85/45/d8/8545d8dbca60eded33b08020b6810737.jpg"
-                                class="card-img-top" alt="T-shirt Image">
+                            <img src="https://i.pinimg.com/236x/85/45/d8/8545d8dbca60eded33b08020b6810737.jpg" class="card-img-top" alt="T-shirt Image">
                             <div class="card-body">
                                 <h5 class="card-title text-center text-decoration-none text-dark">T-shirt</h5>
                             </div>
@@ -37,7 +34,7 @@
                     </a>   
                 </div>
                 <div class="col-md-4">
-                    <a href="Sweatshirt/sweatshirts.html">
+                    <a href="Sweatshirt/sweatshirts.html" class="text-decoration-none">
                         <div class="card mb-4">
                             <img src="https://i.pinimg.com/236x/b2/b0/bf/b2b0bfb66a186e8bf96f1da9c15a8d66.jpg" class="card-img-top" alt="T-shirt Image">
                             <div class="card-body">
