--- a/Hoodies/hoodies.html
+++ b/Hoodies/hoodies.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweatshirts</title>
+    <title>Hoodies</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
         rel="stylesheet">
@@ -30,7 +30,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Hoodies 1</h5>
                             <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                            <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i>Add to Cart</a>
+                            <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Hoodies 2</h5>
                             <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                            <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i>Add to Cart</a>
+                            <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Hoodies 3</h5>
                             <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                            <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i>Add to Cart</a>
+                            <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                         </div>
                     </div>
                 </div>
