--- a/Hoodies/hoodiesp2.html
+++ b/Hoodies/hoodiesp2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sweatshirts</title>
+    <title>Hoodies</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
         rel="stylesheet">
@@ -27,9 +27,9 @@
                 <div class="card mb-4">
                     <img src="https://i.pinimg.com/564x/d8/47/dc/d847dcb0faf3c94c3d7f03097a7d9285.jpg" class="card-img-top" alt="Sweatshirt Image">
                     <div class="card-body">
-                        <h5 class="card-title">Hoodies 7</h5>
+                        <h5 class="card-title">Hoodies 4</h5>
                         <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i>Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
@@ -38,9 +38,9 @@
                 <div class="card mb-4">
                     <img src="https://i.pinimg.com/control/564x/2f/86/8a/2f868a09fca4d82a16ef1c85ae9397e3.jpg" class="card-img-top" alt="Sweatshirt Image">
                     <div class="card-body">
-                        <h5 class="card-title">Hoodies 8</h5>
+                        <h5 class="card-title">Hoodies 5</h5>
                         <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i>Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
@@ -49,9 +49,9 @@
                 <div class="card mb-4">
                     <img src="https://i.pinimg.com/control/564x/9d/03/ba/9d03baf2a791909304101d9bac926f21.jpg" class="card-img-top" alt="Sweatshirt Image">
                     <div class="card-body">
-                        <h5 class="card-title">Hoodies 9</h5>
+                        <h5 class="card-title">Hoodies 6</h5>
                         <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i>Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
