--- a/Sweatshirt/sweatshirts.html
+++ b/Sweatshirt/sweatshirts.html
@@ -33,7 +33,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sweatshirts 1</h5>
                         <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sweatshirts 2</h5>
                         <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Sweatshirts 3</h5>
                         <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
