--- a/Sweatshirt/sweatshirtsp2.html
+++ b/Sweatshirt/sweatshirtsp2.html
@@ -30,7 +30,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Sweatshirts 7</h5>
                     <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                    <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                    <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Sweatshirts 8</h5>
                     <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                    <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                    <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Sweatshirts 9</h5>
                     <p class="card-text">Price: $40 | <del class=" text-danger">$60</del></p>
-                    <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                    <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                 </div>
             </div>
         </div>
