--- a/T-shirt/tshirtp2.html
+++ b/T-shirt/tshirtp2.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T-shirts</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
-        rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -30,7 +29,7 @@
                     <div class="card-body">
                         <h5 class="card-title">T-shirt 1</h5>
                         <p class="card-text">Price: $20   <span class="badge bg-danger">Sold -50%</span></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
@@ -41,7 +40,7 @@
                     <div class="card-body">
                         <h5 class="card-title">T-shirt 1</h5>
                         <p class="card-text">Price: $20   <span class="badge bg-danger">Sold -50%</span></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +51,7 @@
                     <div class="card-body">
                         <h5 class="card-title">T-shirt 1</h5>
                         <p class="card-text">Price: $20   <span class="badge bg-danger">Sold -50%</span></p>
-                        <a href="#" class="btn btn-success"> <i class="bi bi-cart-dash-fill"></i> Add to Cart</a>
+                        <a href="../Order/Order.html" class="btn btn-success">Buy</a>
                     </div>
                 </div>
             </div>
